Added a major update for #248, non logged in user are now greeted by a message instead of showing 403 access denied

--- a/web/static/pages.css
+++ b/web/static/pages.css
@@ -311,3 +311,21 @@ nav span.bibliostyle {
     user-select: all; /* Chrome and Opera */
 }
 
+.copyright {
+    top: 45vh;
+    width: 100vw;
+    left: 0;
+    position: fixed;
+    color: black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.copyright h3 {
+    background: white;
+    width: auto;
+    border: 1px solid darkred;
+    align-self: center;
+    padding: 0.5rem;
+}
