Fixed #258, This commit added breadcrumbs to all catalogue sites which did not have one yet and fixed the css to make it look a bit less stupid

--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -46,6 +46,10 @@ header {
 	padding-bottom: 1rem;
 }
 
+header ul {
+    text-align: left;
+}
+
 .progress {
 	margin-top: 0.5rem;
 	display: block;
