--- a/web/style/metadata.css
+++ b/web/style/metadata.css
@@ -7,3 +7,11 @@ td {
     margin-left: 5rem;
     margin-right: 10rem;
 }
+
+.breadcrumb li{
+    display: inline;
+}
+
+.breadcrumb li+li::before{
+    content: " -> ";
+}
