--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -3,33 +3,6 @@ html {
 	overflow-x: hidden;
 }
 
-ol {
-	margin-left: 10%;
-	width: 80%;
-}
-
-
-ul {
-	margin-left: 10%;
-	width: 80%;
-}
-
-
-li {
-  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-  min-height: 5%;
-  margin-top: 1.6rem;
-}
- 
-li a {
-  text-decoration: none;
-
-  color: #007bff;
-
-  display: block;
-  overflow: hidden;
-}
-
 .metadata {
 	font-size: small;
 	text-color: grey;
@@ -40,37 +13,25 @@ li a {
     text-decoration: underline;
 }
 
-header {
-	text-align: center;
-	border-bottom: 1px solid grey;
+article.main {
 	padding-bottom: 1rem;
 }
 
-header ul {
+article.main ol {
     text-align: left;
-    margin-left: 1rem;
+    margin-top: 2rem;
 }
 
-header ol {
-    text-align: left;
-    margin-left: 1rem;
-    list-style: none;
+article.main ol li {
+    font-size: large;
 }
 
-header ol li {
-    display: inline-block;
+article.main ol:before {
+	border-bottom: 1px solid grey;
+	content: "";
 }
 
-header ol li a {
-    display: inline;
-}
 
-header ol li+li:before {
-  content: "->";
-  display: inline-block;
-  padding-right: 1rem;
-  padding-left: 1rem;
-}
 /*
 header ol li:last-child:after {
     display: inline-block;
