Added a bit more style to the year page of the catalogue

--- a/web/topnav.css
+++ b/web/topnav.css
@@ -178,3 +178,8 @@ article.main {
 article.main ol {
     text-transform: capitalize;
 }
+
+.yearbooks {
+    display: inline;
+    margin-left: 0.5rem;
+}
