Fixed a lot of small mistakes added access right check for everyone

--- a/templates/pages_template.html
+++ b/templates/pages_template.html
@@ -30,7 +30,7 @@
 			<a class="about" href="../" rel="index up">About this book</a>
 			<div class='srchbarcontainer'>
 			<input id='srchbox' class='srchbarinput' type='text' placeholder="search this book"/>
-				<i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'>
+				<i style='display: inline;' class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'>
 				</i>
 			</div>
 			<div class='righthandedbox'>
