--- a/web/static/pages.css
+++ b/web/static/pages.css
@@ -199,11 +199,20 @@ body {
     margin-top: 4rem;
 }
 
-.pagecontainerFullImg {
+.container_full {
     display: grid;
     width: 100%;
     grid-template-columns: 100%;
     margin-top: 4rem;
+}
+
+.container_ocr {
+    display: grid;
+    width: calc(100% - 2rem);
+    grid-template-columns: 0% 100%;
+    margin-top: 4rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .pagecontainerFullImg div {
