Changes naming: books are now documents

--- a/templates/template_navbar.html
+++ b/templates/template_navbar.html
@@ -4,14 +4,14 @@
 	<div class='dropdown'>
 		<a id='statisticslink' {{ topnav.catalogue }} href='/catalogue'>Catalogue</a>
 		<div class='dropdown-content'>
-			<a href="/catalogue/books">Books</a>
+			<a href="/catalogue/books">Documents</a>
 			<a href="/catalogue/authors">Authors</a>
 			<a href="/catalogue/collections">Collections</a>
 			<a href="/catalogue/years">Years</a>
 		</div>
 	</div>
 	<a id='administrationlink' class='classifiedContent {{ topnav.admin }}' href='/private/admin/Administration.html' data-acc=4>Administration</a>
-	<a id='uploadbooklink' class='classifiedContent {{ topnav.upload }}' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
+	<a id='uploadbooklink' class='classifiedContent {{ topnav.upload }}' href='/private/write/UploadBook.html' data-acc=2>Upload Documents</a>
 
 	<div class='topnav-right-in' id='loggedintopnav'>
 		<span id='LoggedInAs'>Logged in</span>
